# arba-meta

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
cmake/config/: package-config.cmake.in
cmake/scripts/: quick_install.cmake
example/: CMakeLists.txt  example.cpp
include/arba/meta/: meta.hpp
include/arba/meta/algorithm/: concat.hpp  filter_and_make_tuple.hpp
include/arba/meta/concept/: addable.hpp  arithmetic.hpp  bitwise_logical.hpp  bitwise_shiftable.hpp  decrementable.hpp  floating_point.hpp  incrementable.hpp  integral.hpp  multipliable.hpp  signedness.hpp  totally_arithmetic.hpp
include/arba/meta/concept/policy/: execution_policy.hpp
include/arba/meta/policy/: endianness_policy.hpp  exception_policy.hpp  thread_policy.hpp
include/arba/meta/type_traits/: associated_type.hpp  crtp.hpp  default.hpp  enum.hpp  integer_n.hpp  integer_sized_string_pack.hpp  is_moveable_to_itself.hpp  kwargs.hpp  make_mutex_type.hpp  paired_with_source_location.hpp  remove_right_reference.hpp  sequence.hpp  type_and_source_location.hpp  type_or_default.hpp  value_or_default.hpp  value_or_generate.hpp
test/: CMakeLists.txt  associated_type_tests.cpp  default_arg.hpp  exception_policy_tests.cpp  integer_n_tests.cpp  is_moveable_to_itself_tests.cpp  project_version_tests.cpp  remove_right_reference_tests.cpp  sequence_tests.cpp  thread_policy_tests.cpp  type_or_tests.cpp  value_or_generate_tests.cpp  value_or_tests.cpp
test/algorithm/: CMakeLists.txt  concat_tests.cpp  filter_and_make_tuple_tests.cpp
test/concepts/: CMakeLists.txt  addable_tests.cpp  arithmetic_tests.cpp  bitwise_logical_tests.cpp  bitwise_shiftable_tests.cpp  decrementable_tests.cpp  floating_point_tests.cpp  incrementable_tests.cpp  integral_tests.cpp  multipliable_tests.cpp  signedness_tests.cpp  totally_arithmetic_tests.cpp
test/concepts/ut/: nothing.hpp
test/policy/: CMakeLists.txt  endianness_policy_tests.cpp  exception_policy_tests.cpp  execution_policy_tests.cpp  thread_policy_tests.cpp
test/type_traits/: CMakeLists.txt  associated_type_tests.cpp  integer_n_tests.cpp  integer_sized_string_pack_tests.cpp  is_moveable_to_itself_tests.cpp  make_mutex_type_tests.cpp  paired_with_source_location_tests.cpp  remove_right_reference_tests.cpp  sequence_tests.cpp  type_and_source_location_tests.cpp  value_or_default_tests.cpp
test/type_traits/crtp/: CMakeLists.txt  base_decorated_with_decorator_tests.cpp  decorated_base_tests.cpp  simple_base_tests.cpp
test/type_traits/enum/: CMakeLists.txt  bit_enum_tests.cpp  explicit_integer_enum_tests.cpp  explicit_integer_string_enum_tests.cpp  implicit_integer_enum_tests.cpp  implicit_integer_string_enum_tests.cpp  integer_enum_tests.cpp  integer_string_enum_tests.cpp  integral_enum_tests.cpp  string_enum_tests.cpp
test/type_traits/kwargs/: CMakeLists.txt  kwargs_with_unregognized_args_tests.cpp  kwargs_without_unregognized_args_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
